[tool.poetry]
name = "onebot_qq_extension"
version = "0.1.1"
description = "基于 OneBot v12 子协议 OneBot QQ Extension 实现的 nonebot2 适配器"
authors = ["Sclock <1342810270@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://sclock.github.io/onebot-qq-extension/"
repository = "https://github.com/Sclock/onebot-qq-extension"
documentation = "https://sclock.github.io/onebot-qq-extension/"
keywords = ["bot", "qq", "qqbot", "coolq", "onebot", "cqhttp"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Robot Framework",
  "Framework :: Robot Framework :: Library",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3"
]

packages = [
  { include = "nonebot" }
]

[tool.poetry.dependencies]
python = "^3.7.3"
nonebot2 = "^2.0.0b3"
nonebot-adapter-onebot = "^2.1.0"

[tool.poetry.dev-dependencies]
nonebot2 = { git = "https://github.com/nonebot/nonebot2.git" }
nonebot-adapter-onebot = { git = "https://github.com/nonebot/adapter-onebot.git" }

# [[tool.poetry.source]]
# name = "aliyun"
# url = "https://mirrors.aliyun.com/pypi/simple/"
# default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"